css/style.css
/*********************************************************************
GENERAL
**********************************************************************/
body {
  margin: 0;
  padding: 0;

  font-size: 16px;
  line-height: 22px;
  font-family: "Roboto", "Arial", sans-serif;
  color: #ffffff;
}

:focus {
  outline-color: #f26843;
}

.form {
  z-index: 100;

  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding: 10px 20px;

  background-color: #f8f7f4;
  border-radius: 5px;
}

.form__input {
  width: 220px;
  margin: 10px 0;
  padding: 10px;

  font-size: 14px;
  line-height: 24px;
  vertical-align: middle;
  color: #323232;
  font-weight: 700;
  box-sizing: border-box;
  border: 1px solid #d3d3d2;
  border-radius: 5px;
}

.form__input::placeholder {
  font-size: 14px;
  line-height: 24px;
  color: #999999;
  font-weight: 400;
}

.form__input:hover {
  border: 2px solid #c7c6c5;
}

.form__input:focus {
  border: 2px solid #8fbdec;
  outline: none;
}

img {
  width: 100%;
  height: auto;
}

.centerer {
  min-width: 900px;
  max-width: 1200px;
  margin: 0 auto;
}

.main-page {
  min-width: 900px;

  background-image: url("../img/slide_1.png");
  background-repeat: no-repeat;
  background-position-x: center;
  background-position-y: 0;

  transition: background-image 0.5s ease, background-color 0.5s ease;
}

.main-page::before,
.main-page::after {
  content: "";

  visibility: hidden;
}

.main-page::before {
  background-image: url("../img/slide_2.png");
}

.main-page::after {
  background-image: url("../img/slide_3.png");
}

.catalog-page {
  min-width: 900px;

  background-color: #849d8f;
  background-image: linear-gradient(to bottom, #9db1a5 0%, #849d8f 40%);
}

.content-container {
  box-sizing: border-box;
  padding: 0 2.2%;
}

.visually-hidden {
  position: absolute;

  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;

  border: 0;

  clip: rect(0 0 0 0);
}

.popup {
  position: absolute;
  top: 100%;
  z-index: 100;

  padding-top: 5px;

  border-radius: 5px;
  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.5);
  visibility: hidden;
}

.popup--left-aligned {
  left: 0;
}

.popup--right-aligned {
  right: 0;
}

.link {
  color: #ffffff;
  text-decoration: none;
}

.link--light {
  color: #ffffff;
  text-decoration: underline;

  text-decoration-color: #a9bbb1;
}

.link--light:hover,
.link--light:active,
.link--light:focus {
  color: #ffbc9e;

  text-decoration-color: #a7a294;
}

.link--dark {
  color: #323232;
  text-decoration: underline;

  text-decoration-color: #b2b2b2;
}

.link--dark:hover,
.link--dark:active,
.link--dark:focus {
  color: #e84d37;

  text-decoration-color: #f9cdc4;
}

.button {
  display: inline-block;
  padding: 10px 20px;

  font-weight: 700;
  font-size: 18px;
  line-height: 24px;
  font-family: "Roboto", "Arial", sans-serif;
  vertical-align: middle;
  text-align: center;
  color: #ffffff;
  text-decoration: none;

  background-color: #f26843;
  background-image: linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
  border: none;
  border-radius: 50px;
  box-shadow: 0 2px 2px 0 rgba(172, 16, 0, 0.64);
}

.button:hover,
.button:focus {
  color: #fefefe;

  background-image: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
  box-shadow: 0 2px 2px 0 #ac1000;
}

.button:active {
  color: #fceeec;

  background-image: linear-gradient(to bottom, #d74632 0%, #e1613e 100%);
  box-shadow: inset 0 2px 2px 0 #952718;
}

.button-cancel {
  background-color: transparent;
  border-style: none;
  cursor: pointer;
}

/*********************************************************************
PAGE HEADER
**********************************************************************/

.page-header {
  padding-top: 8px;
}

.menu {
  position: relative;

  display: flex;
  align-items: center;
}

.logo {
  flex-grow: 0;
  width: 154px;
  height: 64px;
  margin-right: 10px;
  padding-left: 1px;
}

.navigation {
  flex-grow: 1;
  margin-right: 10px;
}

.user-action {
  flex-grow: 0;
}

.navigation__list {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;

  list-style: none;
  font-weight: 700;
  font-size: 16px;
  line-height: 18px;
}

.navigation__item {
  position: relative;
  z-index: 10;

  padding: 8px 0;

  border-radius: 20px;
}

.navigation__link {
  padding: 8px 14px;

  border-radius: 20px;
}

.navigation__link--current {
  background-color: #d07058;
  border-bottom: none;
}

.navigation__label {
  border-bottom: 1px solid #adbdb4;
}

.navigation__item:hover .popup {
  visibility: visible;
}

.navigation__item:hover .navigation__link:not(.navigation__link--current) {
  background-color: #f7f6f3;
}

.navigation__item:hover .navigation__label:not(.navigation__label--current) {
  color: #333333;

  border-bottom: none;
}

.navigation__link:not(.navigation__link--current):active {
  background-color: #ededed;
  box-shadow: inset 0 2px 1px 0 #696969;
}

.submenu {
  padding: 0;

  list-style: none;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;

  background-color: #f8f7f4;
  border-radius: 5px;
}

.submenu__item {
  margin-top: 4px;
  margin-bottom: 4px;

  vertical-align: middle;
}

.submenu__item:first-child {
  margin-top: 0;

  border-radius: 5px 5px 0 0;
}

.submenu__item:last-child {
  margin-bottom: 0;

  border-radius: 0 0 5px 5px;
}

.submenu__item--current {
  background-color: #d07058;
}

.submenu__link {
  display: block;
  margin: 0 5px;
  padding: 7px 15px 4px 15px;

  color: #323232;
  white-space: nowrap;
}

.submenu__link--important {
  padding-top: 10px;
  padding-bottom: 10px;

  font-weight: 700;

  border-bottom: 1px solid #d1d0ce;
}

.submenu__link:last-child {
  padding-bottom: 10px;
}

.submenu__link--current {
  color: #ffffff;
}

.submenu__item:not(.submenu__item--current):hover {
  background-color: #fbded8;
}

.submenu__item:not(.submenu__item--current):active {
  background-color: #f6b5a5;
}
/* ... */

